[gd_scene load_steps=2 format=3 uid="uid://k3fwnun8ixrw"]

[ext_resource type="Script" uid="uid://7dp7m4jreu6s" path="res://scenes/experience/upgrade_menu/upgrade_menu.gd" id="1_j8xs7"]

[node name="UpgradeMenu" type="Control" groups=["upgrade_menu"]]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_j8xs7")

[node name="Title" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -60.1667
offset_right = 75.5
offset_bottom = -37.8333
grow_horizontal = 2
grow_vertical = 2
text = "Choose an Upgrade"

[node name="Option" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Option1" type="Button" parent="Option"]
unique_name_in_owner = true
layout_mode = 2

[node name="Option2" type="Button" parent="Option"]
unique_name_in_owner = true
layout_mode = 2

[node name="Option3" type="Button" parent="Option"]
unique_name_in_owner = true
layout_mode = 2
